4.CI-CD/kubernetes/workflow_examples/deployment_simple.yaml
# Create deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  labels:
    app: blue-app
    env: demo
    owner : Krotek

spec:
  replicas: 2

  selector:
    matchLabels:
      project: example
  
  template:
    metadata:
      labels:
        project: example

    spec:
      containers:
        - name: blue-app
          image: 530117518858.dkr.ecr.eu-central-1.amazonaws.com/blue-app-dev:latest
          ports:
            - containerPort: 80
