4.CI-CD/kubernetes/workflow_examples/create_dep_autosc_lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-deploy
  labels:
    app: blue-app

spec:
  replicas: 2
  selector:
    matchLabels:
      project: blue-app-project

  template:
    metadata:
      labels:
        project: blue-app-project
    spec:
      containers:
        - name: blue-app
          image: 530117518858.dkr.ecr.eu-central-1.amazonaws.com/blue-app-dev:latest
          ports:
            -  containerPort: 80



---
#LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: lb-for-app
  labels:
    env: dev
    owner: Krotek

spec:
  type: LoadBalancer
  selector:
    project: blue-app-project
  ports:
  - name:  app-listener
    protocol: TCP
    port:  80
    targetPort: 80
